argocd/k8s/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: glance
          image: glanceapp/glance:v0.8.6
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 96Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: config
              mountPath: /app/config
              readOnly: true
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          configMap:
            name: glance-config
        - name: tmp
          emptyDir: {}
